--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,3 +14,21 @@ div{
 .red{
   background-color: red;
 }
+
+.yellow-1{
+  background-color: yellow;
+}
+.blue-1{
+  background-color: blue;
+}
+.red-1{
+  background-color: red;
+}
+
+.l{
+  float: left;
+}
+
+br{
+  line-height: 40px;
+}
